5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1635_2703.log
== TEST (2019-04-13 21:37:48) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper>17)
	print("eleitor")
else.upper:
	print(nao_eleitor)
	
-- ERROR:
File "XXXX", line 3
    if (idade.upper>17)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:38:35) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper()>17)
	print("eleitor")
else.upper:
	print(nao_eleitor)
	
-- ERROR:
File "XXXX", line 3
    if (idade.upper()>17)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:38:39) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper()>17)
	print("eleitor")
else.upper:
	print(nao_eleitor)
	
-- EXECUTION TIME:
0.149684
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if (idade.upper()>17)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:39:03) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper() > 17)
	print("eleitor")
else.upper:
	print(nao_eleitor)
	
-- ERROR:
File "XXXX", line 3
    if (idade.upper() > 17)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:39:43) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper() >= 18)
	print("eleitor")
else.upper:
	print(nao_eleitor)
	
-- ERROR:
File "XXXX", line 3
    if (idade.upper() >= 18)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:40:50) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper() >= 18)
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- ERROR:
File "XXXX", line 3
    if (idade.upper() >= 18)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:40:55) 
-- CODE:
idade = floar(input("sua idade: "))

if (idade.upper() >= 18)
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.14339
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if (idade.upper() >= 18)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:42:04) 
-- CODE:
idade = floar(input("sua idade: "))

if ( idade.upper() >= 18 )
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- ERROR:
File "XXXX", line 3
    if ( idade.upper() >= 18 )
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:42:07) 
-- CODE:
idade = floar(input("sua idade: "))

if ( idade.upper() >= 18 )
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.175858
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if ( idade.upper() >= 18 )
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:42:40) 
-- CODE:
idade = floar(input("sua idade: "))

if ( idade.upper() >=18 )
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- ERROR:
File "XXXX", line 3
    if ( idade.upper() >=18 )
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:42:57) 
-- CODE:
idade = floar(input("sua idade: "))

if ( idade.upper() >= 18 )
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- ERROR:
File "XXXX", line 3
    if ( idade.upper() >= 18 )
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:43:04) 
-- CODE:
idade = floar(input("sua idade: "))

if ( idade.upper() >= 18 ):
	print("eleitor")
else.upper():
	print("nao_eleitor")
	
-- ERROR:
File "XXXX", line 5
    else.upper():
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:43:19) 
-- CODE:
idade = floar(input("sua idade: "))

if ( idade.upper() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = floar(input())
NameError: name 'floar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:43:28) 
-- CODE:
idade = float(input("sua idade: "))

if ( idade.upper() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.upper() >= 18 ):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:43:31) 
-- CODE:
idade = float(input("sua idade: "))

if ( idade.upper() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.166439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.upper() >= 18 ):
AttributeError: 'float' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:43:39) 
-- CODE:
idade = float(input("sua idade: "))

if ( idade.upper() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.upper() >= 18 ):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:43:50) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.upper() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.upper() >= 18 ):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:43:53) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.upper() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.135134
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.upper() >= 18 ):
AttributeError: 'float' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:44:06) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:44:08) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.135352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:44:22) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:44:49) 
-- CODE:
idade = float(input("sua idade: (12)"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:44:51) 
-- CODE:
idade = float(input("sua idade: (12)"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.178813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:44:59) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:45:00) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:45:02) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.128938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:45:59) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:45:59) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- EXECUTION TIME:
0.147361
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:46:00) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:46:03) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	print("eleitor")
else:
	print("nao_eleitor")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:42:11) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.199575
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:42:13) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:52:02) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:52:04) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.178364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:52:06) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade.lower() >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( idade.lower() >= 18 ):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:08:04) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:08:07) 
-- CODE:
idade = float(input("sua idade:"))

if ( idade >= 18 ):
	mensagem = ("eleitor")
else:
	mensagem = ("nao_eleitor")
	
print(mensagem)
-- EXECUTION TIME:
0.170024
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
